# airflow-copilot

./: .dockerignore  .env.example  .gitignore  404.html  CNAME  Dockerfile  Dockerfile.local  README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements copy.txt  requirements.txt  run-poetry.py  sitemap.xml
.github/workflows/: deploy-docs.yml  release-auto.yml  release-docker-docs.yml  release.yml
airflow-copilot/: 404.html  index.html  sitemap.xml
airflow-copilot/contributing/: index.html
airflow-copilot/example/: index.html
airflow-copilot/roadmap/: index.html
airflow-copilot/search/: search_index.json
architecture/agent/: index.html
architecture/airflow_auth_type/: index.html
architecture/architecture/: index.html
architecture/refresh_history/: index.html
architecture/summarization/: index.html
architecture/supported_apis/: index.html
assets/: extra.css
assets/example/: dynamic_schedule_dag.py
configuration/environment_variables/: index.html
contributing/: index.html
deployment/deployment/: index.html
docker/: docker.md
docker/prodcution/: docker-compose.production.yml  docker-compose.yml
docker/scripts/: bump-version.sh  entrypoint.sh  init.sql  (+3 more)
docs/: contributing.md  example.md  index.md  roadmap.md
example/: index.html
k8s/: airflow-copilot-deployment.yaml  airflow-copilot-ingress.yaml  airflow-copilot-service.yaml
manifest/: manifest.json
roadmap/: index.html
search/: search_index.json
src/: .env.example  get_ngrok_url.py  local_run.sh
(+48 files in other folders)
