[project]
name = "airflow-copilot"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikhil Suthar",email = "n.suthar.online@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "mkdocs-material (>=9.6.14,<10.0.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langgraph-checkpoint-redis (>=0.0.6,<0.0.7)",
    "langgraph-checkpoint-postgres (>=2.0.21,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "langchain-groq (>=0.3.2,<0.4.0)",
    "botbuilder (>=0.0.1,<0.0.2)",
    "botbuilder-core (>=4.17.0,<5.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "aiohttp (>=3.12.13,<4.0.0)",
    "langgraph-prebuilt (>=0.2.2,<0.3.0)",
    "psycopg-binary (>=3.2.9,<4.0.0)",
    "langchain-openai (>=0.3.23,<0.4.0)",
    "langchain-google-genai (>=2.1.5,<3.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "mkdocs-material (>=9.6.14,<10.0.0)",
    "mkdocs-mermaid2-plugin (>=1.2.1,<2.0.0)",
    "langchain-anthropic (>=0.3.17,<0.4.0)"
]

[tool.poetry]
packages = [{include = "airflow_copilot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
